# weave_tutorial

./: .env.smaple  pyproject.toml
evaluation/: evaluate_a_rag_app.py  evaluate_a_rag_app_ollama.py
example/: 01_track_llm_inout.py
notebooks/: 01_track_llm_inout.ipynb  02_track_applicacion_logic.ipynb
src/weave_tutorial/: __init__.py
