[project]
name = "weave-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "popiemon", email = "kryo.over@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "openai>=1.69.0",
    "weave>=0.51.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
